Add module not required because module depends on it